tests/ui/impl-trait/in-trait/gat-outlives.stderr
error: missing required bound on `Gat`
  --> $DIR/gat-outlives.rs:6:5
   |
LL |     type Gat<'a>;
   |     ^^^^^^^^^^^^-
   |                 |
   |                 help: add the required where clause: `where Self: 'a`
   |
   = note: this bound is currently required to ensure that impls have maximum flexibility
   = note: we are soliciting feedback, see issue #87479 <https://github.com/rust-lang/rust/issues/87479> for more information

error: missing required bound on `Gat`
  --> $DIR/gat-outlives.rs:12:5
   |
LL |     type Gat<'a>;
   |     ^^^^^^^^^^^^-
   |                 |
   |                 help: add the required where clause: `where Self: 'a`
   |
   = note: this bound is currently required to ensure that impls have maximum flexibility
   = note: we are soliciting feedback, see issue #87479 <https://github.com/rust-lang/rust/issues/87479> for more information

error: aborting due to 2 previous errors

